--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "Disaster Preparedness Platform Design",
+      "name": "disaster-preparedness-platform-design",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
