--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@vercel/analytics": "^1.5.0",
+            "@vercel/speed-insights": "^1.2.0",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
@@ -46,21 +48,35 @@
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
             "vaul": "^1.1.2",
-            "web-vitals": "^5.1.0"
+            "vite-plugin-pwa": "^1.0.3",
+            "web-vitals": "^5.1.0",
+            "workbox-window": "^7.3.0",
+            "zod": "^4.1.11"
       },
       "devDependencies": {
+            "@testing-library/jest-dom": "^6.9.1",
+            "@testing-library/react": "^16.3.0",
+            "@testing-library/user-event": "^14.6.1",
             "@types/node": "^20.10.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "@vitest/ui": "^3.2.4",
+            "jsdom": "^27.0.0",
             "rollup-plugin-visualizer": "^6.0.4",
             "terser": "^5.44.0",
             "vite": "6.3.5",
-            "vite-plugin-compression": "^0.5.1"
+            "vite-plugin-compression": "^0.5.1",
+            "vitest": "^3.2.4"
       },
       "scripts": {
             "dev": "vite",
             "build": "vite build",
             "build:analyze": "vite build && open build/stats.html",
             "preview": "vite preview",
-            "lint": "tsc --noEmit"
+            "lint": "tsc --noEmit",
+            "test": "vitest",
+            "test:ui": "vitest --ui",
+            "test:run": "vitest run",
+            "test:coverage": "vitest run --coverage",
+            "test:watch": "vitest --watch"
       }
 }
