--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
             "vite-plugin-compression": "^0.5.1",
             "vitest": "^3.2.4"
       },
+      "optionalDependencies": {
+            "@rollup/rollup-linux-x64-gnu": "^4.28.1"
+      },
       "scripts": {
             "dev": "vite",
             "build": "vite build",
