Fix: Add SWC Linux bindings for Vercel builds

--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
             "vitest": "^3.2.4"
       },
       "optionalDependencies": {
-            "@rollup/rollup-linux-x64-gnu": "^4.28.1"
+            "@rollup/rollup-linux-x64-gnu": "^4.28.1",
+            "@swc/core-linux-x64-gnu": "^1.10.3"
       },
       "scripts": {
             "dev": "vite",
