--- a/package.json
+++ b/package.json
@@ -67,14 +67,12 @@
             "@types/node": "^20.10.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "@vitest/ui": "^3.2.4",
-            "glob": "^11.0.3",
             "jsdom": "^27.0.0",
             "rollup-plugin-visualizer": "^6.0.4",
             "terser": "^5.44.0",
             "vite": "^6.3.6",
             "vite-plugin-compression2": "^1.3.3",
-            "vitest": "^3.2.4",
-            "workbox-build": "^7.3.0"
+            "vitest": "^3.2.4"
       },
       "optionalDependencies": {
             "@rollup/rollup-linux-x64-gnu": "^4.28.1",
