fix: replace wildcard dependencies with specific versions (v2.0)
- clsx: * → ^2.1.1
- react-router-dom: * → ^7.9.4
- tailwind-merge: * → ^3.3.1

This ensures reproducible builds and prevents unexpected breaking changes
from automatic dependency updates in production deployments.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
             "@vercel/analytics": "^1.5.0",
             "@vercel/speed-insights": "^1.2.0",
             "class-variance-authority": "^0.7.1",
-            "clsx": "*",
+            "clsx": "^2.1.1",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
             "framer-motion": "^12.23.22",
@@ -50,10 +50,10 @@
             "react-dom": "^18.3.1",
             "react-hook-form": "^7.55.0",
             "react-resizable-panels": "^2.1.7",
-            "react-router-dom": "*",
+            "react-router-dom": "^7.9.4",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
-            "tailwind-merge": "*",
+            "tailwind-merge": "^3.3.1",
             "vaul": "^1.1.2",
             "vite-plugin-pwa": "^0.21.1",
             "web-vitals": "^5.1.0",
