--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
             "jsdom": "^27.0.0",
             "rollup-plugin-visualizer": "^6.0.4",
             "terser": "^5.44.0",
+            "typescript": "^5.9.3",
             "vite": "^6.3.6",
             "vite-plugin-compression2": "^1.3.3",
             "vitest": "^3.2.4"
