--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
-            "vaul": "^1.1.2",
-            "vite": "*"
+            "vaul": "^1.1.2"
       },
       "devDependencies": {
             "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -61,7 +60,7 @@
             "autoprefixer": "^10.4.21",
             "postcss": "^8.5.6",
             "tailwindcss": "^4.1.14",
-            "vite": "6.3.5"
+            "vite": "^6.3.6"
       },
       "scripts": {
             "dev": "vite",
