--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,8 +1,6 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ]
+    { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "outputDirectory": "build"
 }
